[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "graduate_design"
description = "personal graduate design"
version = "0.0.1"
readme = "README.md"
keywords = ["CT", "THZ", "deep learning"]
dependencies = [
    "numpy",
    "torch",
    "torchnet",
    "pillow",
    "matplotlib",
    "aiofiles",
    "rich",
    "opencv-contrib-python",
    "rtoml",
    "visdom",
]

[tool.jedi]
venv = 'ai'

[tool.ruff]
line-length = 80
target-version = 'py311'
