[project]
name = "graduate_design"
description = "personal graduate design"
version = "0.1.0"
readme = "README.md"
keywords = ["CT", "THZ", "deep learning"]
dependencies = [
    "numpy",
    "torch",
    "torchnet",
    "pillow",
    "matplotlib",
    "aiofiles",
    "rich",
    "opencv-contrib-python",
    "tomli",
    "visdom",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["./src"]

[tool.setuptools.package-dir]
"" = "./src"

[tool.setuptools.package-data]
"graduate_design.cylib" = [
    "cpp/include/*.hpp"
]

[tool.setuptools.exclude-package-data]
"graduate_design.cylib" = [
    "*.cpp",
    "cpp/src/*.cpp",
    "cpp/include/*.hpp",
]

[tool.pyright]
venv = 'ai'
include = ["./src"]

[tool.ruff]
line-length = 80
target-version = 'py310'
